@@ -1,5 +1,8 @@
 2006-09-09  Martin Mares  <mj@ucw.cz>
 
+	* lspci.c (show_machine): In the `-m' mode, do proper shell escaping
+	if the fields printed contain quotes or backslashes.
+
 	* lspci.c (show_machine): Added a `-vmm' mode, which removes the misuse
 	of the `Device' tag for two different purposes.
 
